--- a/main.html
+++ b/main.html
@@ -11,12 +11,14 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div class="hero">
-  <div class="content">
-    <h1>Welcome to my Pinterest Clone</h1>
+  <div class="image-container">
+    <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Hero Image">
+  </div>
+  <div class="hero-content">
+    <h1>Welcome to my pinterest clone</h1>
     <p>Discover amazing ideas and inspirations</p>
     <a href="#" class="explore-button">Explore Now</a>
   </div>
-  <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Hero Image">
 </div>
 
 
